# bullet-shift

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  TODO.md
assets/levels/: level_1.blend  level_1.glb  level_2.blend  level_2.glb  level_3.blend  level_3.glb  level_4.blend  level_4.glb
assets/models/: ak_rifle.glb  auto-shotgun.glb
commands/: README.md  build-linux.sh  build-macos.sh  build-windows.bat
commands/docker/: Dockerfile  build-linux.sh  build-macos.sh  build-windows.sh  docker-compose.yml
commands/docker/internal/: entrypoint-macos.sh  entrypoint-windows.sh
config/: imgui.ini  renderer.txt  settings.ini
include/Core/: Config.h  Game.h  InputState.h  LevelManager.h  ResourceManager.h  Settings.h
include/Entities/: Enemy.h  Inventory.h  Platform.h  Player.h  Projectile.h  Weapon.h  WeaponPickup.h
include/Renderer/: Camera.h  DebugRenderer.h  GLDebug.h  GeometryFactory.h  Mesh.h  ModelLoader.h  PostProcessingSystem.h  Shader.h  ShadowSystem.h  Skybox.h  Texture.h  WeaponRenderer.h
include/Systems/: AudioSystem.h  NavigationGraph.h  ParticleSystem.h  PhysicsSystem.h  RaycastUtility.h
include/UI/: GuiSystem.h  HUD.h  MenuSystem.h
shaders/: bloom_blur.frag  bright_filter.frag  debug_line.frag  debug_line.vert  hud.frag  hud.vert  lighting.frag  lighting.vert  particle.frag  particle.vert  post_processing.frag  post_processing.vert  shadow_depth.vert
src/: main.cpp
src/Core/: Game.cpp  LevelManager.cpp  ResourceManager.cpp  Settings.cpp
src/Entities/: Enemy.cpp  Inventory.cpp  Platform.cpp  Player.cpp  Projectile.cpp  Weapon.cpp  WeaponPickup.cpp
src/Renderer/: Camera.cpp  DebugRenderer.cpp  GeometryFactory.cpp  Mesh.cpp  ModelLoader.cpp  PostProcessingSystem.cpp  Shader.cpp  ShadowSystem.cpp  Skybox.cpp  Texture.cpp  WeaponRenderer.cpp
src/Systems/: AudioSystem.cpp  NavigationGraph.cpp  ParticleSystem.cpp  PhysicsSystem.cpp  RaycastUtility.cpp
src/UI/: GuiSystem.cpp  HUD.cpp  MenuSystem.cpp
